# stock-market-agents

./: .env.template  .gitignore  README.md  debug_outpu1.txt  debug_output.txt  enhancement_plan.md  llm_understanding.ipynb  main.py  manager.py  pyproject.toml  requirements.txt  run_researcher.py  run_ui.py  setup.py  stock_market_agent.ipynb  streamlit_app.py  test_pipeline.py  test_question_breakdown.py  test_report.md  tools.json
agentic_market_analysis/: __init__.py  agent.py
agentic_market_analysis/agents/: __init__.py  alpha_vantage_api_doc_agent.py  researcher_agent.py
agentic_market_analysis/utils/: __init__.py  tools.py
examples/: research_example.py
financial_agents/: financial_data_agent.py  financial_data_tool.py  model_settings.py  planner_agent.py  search_agent.py  writer_agent.py
src/: main.py  test_output.txt
src/agentic_market_analysis/: agents.py  app.py  chat_inference.py  crew.py  main.py  orchestration.py  ticker_lookup.py
stock_market_agents/: __init__.py
stock_market_agents/agents/: base_agent.py  manager_agent.py  researcher_agent.py  writer_agent.py
stock_market_agents/config/: database.py  logging.py  settings.py
stock_market_agents/data/: alpha_vantage_docs.html
stock_market_agents/models/: research.py
stock_market_agents/tools/: alpha_vantage.py  financial_datasets.py  function_schema.py  markdown.py  news.py  sec.py  (+2 more)
test_output/: alpha_vantage_api_rules.json  out.txt  vantage_output.txt  vantage_output1.html
tests/: conftest.py  test_alpha_vantage.py  test_cache.py  test_llm.py  test_news.py  test_sec_api.py
(+9 files in other folders)
